--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -111,7 +111,7 @@ function show_data(num){
 		<a href="/CoGe/TreeView.pl" onmouseover="timing(4)" onmouseout="timing(4,1)" title="TreeView"><img src="/CoGe/picts/carousel/TreeView-logo.png" width="100%" border=0/></a>
 		<a href="/CoGe/GeLo.pl" onmouseover="timing(5)" onmouseout="timing(5,1)" title="GeLoView"><img src="/CoGe/picts/carousel/GeLo-logo.png" width="100%" border=0/></a>
 		<a href="/CoGe/CoGeBlast.pl" onmouseover="timing(6)" onmouseout="timing(6,1)" title="CoGeBlast"><img src="/CoGe/picts/carousel/CoGeBlast-logo.png" width="100%" border=0/></a>
-		<a href="/CoGe/help/CoGe" onmouseover="timing(7)" onmouseout="timing(7,1)" title="CoGe FAQ"><img src="/CoGe/picts/carousel/FAQ-logo.png" width="100%" border=0/></a>
+		<a href="/CoGe/docs/help/CoGe" onmouseover="timing(7)" onmouseout="timing(7,1)" title="CoGe FAQ"><img src="/CoGe/picts/carousel/FAQ-logo.png" width="100%" border=0/></a>
 
 	</div>
     </TD>
