Added Preferences to dropdown menu, moved animations from User Stuff to Preferences

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -122,6 +122,10 @@ function animate_section(name, style, speedy) {
 	  <li><a href="#" target="_self">My Page</a></li>
 	  <li><a href="#" target="_self">Contacts</a></li>
 	  <li><a href="#" target="_self">Saved Results</a></li>
+	 </ul>
+	</li>
+	<li>Preferences
+	 <ul>
 	  <li><a href="#" target="_self">Animation &raquo; </a>
 	    <ul class="animations">
 	      <li><a href="#" target="_self" onClick="define_animation_speed(0)">Off</a></li>
@@ -130,8 +134,8 @@ function animate_section(name, style, speedy) {
 	      <li><a href="#" target="_self" onClick="define_animation_speed(200)">Fast</a></li>
 	     </ul>
 	   </li>
-	 </ul>
-	</li>
+	  </ul>
+	 </li>
 	<li>Help
 	 <ul>
 	      <li><a href="./docs/help/<TMPL_VAR NAME=HELP>" target="_self">Page Docs</a></li>
