--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -62,11 +62,11 @@ function launch_viewer (dsd, chr) {
    <DIV id="viewer"></DIV>
    <DIV id="get_seq"></DIV>
   <TD valign=top>
-   <DIV class = "oblique">Datasets</DIV>
+   <DIV class = "oblique">Datasets</DIV><br>
    <DIV id="ds_list"><TMPL_VAR NAME="DI_LIST"></DIV>
 
   <TD valign=top>
-   <DIV class = "oblique">Dataset information</DIV>
+   <DIV class = "oblique">Dataset information</DIV><br><br>
    <DIV id="ds_info"><TMPL_VAR NAME="DS_INFO"></DIV>
    <DIV id="chr_info"><TMPL_VAR NAME="CHR_INFO"></DIV>
 
