--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -52,9 +52,9 @@ $('#carousel').Carousel(
 			itemMinWidth: 40,
 			items: 'a',
 			reflections: 0,
-			rotationSpeed: 0.7,
+			rotationSpeed: 0.4,
 			slowOnHover: true,
-//			reflections: 1,
+			reflections: 0,
 
 		}
 	);	
